[gd_scene load_steps=10 format=3 uid="uid://duivsc3qsoy1u"]

[ext_resource type="Script" path="res://Scripts/tile_control.gd" id="1_2536e"]
[ext_resource type="Texture2D" uid="uid://myx8numwe6uw" path="res://Sprites/tile_grass.png" id="2_lrk1e"]
[ext_resource type="Texture2D" uid="uid://dvxj6i7f167ex" path="res://Sprites/tile_highlight.png" id="2_pilmh"]
[ext_resource type="Texture2D" uid="uid://b3qdmcgjqiwfv" path="res://Sprites/tile_back.png" id="2_ytmvs"]
[ext_resource type="Texture2D" uid="uid://cgd0kdrr5v3ph" path="res://Sprites/duck.png" id="3_3wv4r"]
[ext_resource type="Texture2D" uid="uid://hbihe01kfvkn" path="res://Sprites/hawk.png" id="4_fd7i0"]
[ext_resource type="Texture2D" uid="uid://b74rjwhrkog16" path="res://Sprites/tile_grass_full.png" id="5_un06b"]
[ext_resource type="Texture2D" uid="uid://nnito4uvyesr" path="res://Sprites/chameleon.png" id="6_t53i6"]
[ext_resource type="PackedScene" uid="uid://dgxmdj3gfdokd" path="res://Scenes/tile_info.tscn" id="8_km85g"]

[node name="TileControl" type="Control"]
custom_minimum_size = Vector2(180, 154)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(90, 77)
script = ExtResource("1_2536e")

[node name="Tile" type="Control" parent="."]
custom_minimum_size = Vector2(180, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 180.0
offset_bottom = 180.0
pivot_offset = Vector2(90, 77)
size_flags_horizontal = 4
mouse_filter = 1

[node name="Selected" type="TextureRect" parent="Tile"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = -13.0
offset_top = -21.0
offset_right = 243.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_pilmh")

[node name="TextureRect" type="TextureRect" parent="Tile"]
modulate = Color(0.666667, 0.666667, 0.666667, 1)
layout_mode = 2
offset_top = -8.0
offset_right = 256.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_ytmvs")

[node name="Side1" type="TextureRect" parent="Tile"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -140.0
offset_right = 128.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.583)
pivot_offset = Vector2(128, 128)
texture = ExtResource("2_lrk1e")
expand_mode = 3

[node name="Animal" type="TextureRect" parent="Tile/Side1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -78.0
offset_right = 100.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_3wv4r")

[node name="Side2" type="TextureRect" parent="Tile"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -140.0
offset_right = 128.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.583)
pivot_offset = Vector2(128, 128)
texture = ExtResource("2_lrk1e")
flip_h = true
flip_v = true

[node name="Animal" type="TextureRect" parent="Tile/Side2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -22.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_fd7i0")

[node name="Full" type="TextureRect" parent="Tile"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -140.0
offset_right = 128.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.68, 0.583)
pivot_offset = Vector2(128, 128)
texture = ExtResource("5_un06b")

[node name="Animal" type="TextureRect" parent="Tile/Full"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_t53i6")

[node name="TileInfo" parent="." instance=ExtResource("8_km85g")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -196.0
offset_right = 150.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="control_selected" from="." to="." method="_on_control_selected"]
[connection signal="control_unselected" from="." to="." method="_on_control_unselected"]
